# legal-sentence-paper

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
data/MultiLegalSBD/: CD_cyber_crime.jsonl  CD_intellectual_property.jsonl  CD_scotus.jsonl
data/alea-legal-benchmark/: train.jsonl
paper/: Makefile  main.bib  main.tex
paper/figures/: rag_error_cascade.dot
paper/references/: references.bib
paper/sections/: abstract.tex  appendix.tex  conclusion.tex  experimental_setup.tex  introduction.tex  methods.tex  related_work.tex  results.tex
paper/tables/: charboundary_model_size_table.tex  dataset_stats_table.tex  main_results_table.tex  memory_usage_table.tex  precision_performance_table.tex
results/: memory_profiles.json
results/paper_results_20250402_203406/: README.md  dataset_stats.json  evaluation_report.html  evaluation_results.json  tokenizers.json
results/paper_results_20250402_203406/latex/: dataset_stats_table.tex  performance_table.tex
results/paper_results_20250402_203406/stats/: alea_train_stats.json  multilegal_bva_stats.json  multilegal_cyber_crime_stats.json  multilegal_intellectual_property_stats.json  multilegal_scotus_stats.json
src/lsp/: __init__.py  __main__.py  cli.py  evaluation.py  example_compare.py  regenerate_html.py  test_tokenizer.py  visualization.py  visualization_html.py
src/lsp/core/: __init__.py  data_loader.py  tokenizer.py
src/lsp/dataloaders/: __init__.py  alea.py  discovery.py  multilegal.py
src/lsp/examples/: __init__.py  aggregate_metrics_table.py  benchmark_throughput.py  (+13 more)
(+7 files in other folders)
