[project]
name = "legal-sentence-paper"
version = "0.1.0"
description = "Legal sentence processing and evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "charboundary[onnx]>=0.4.5",
    "curated-transformers>=2.0.1",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "nupunkt>=0.5.0",
    "pandas>=2.2.3",
    "pysbd>=0.3.4",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "spacy>=3.8.4",
    "tabulate>=0.9.0",
]

[project.scripts]
lsp-tokenize = "lsp.cli:main"
lsp-list-datasets = "lsp.examples.list_datasets:main"
lsp-examine-dataset = "lsp.examples.examine_dataset:main"
lsp-evaluate = "lsp.evaluation:main"
lsp-paper-workflow = "lsp.examples.paper_workflow:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.uv.workspace]
members = ["demo"]
